--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js" 
+    }, 
+    
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.6.0",
         "cross-env": "^7.0",
         "jquery": "^3.6",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^3.1.0",
@@ -22,5 +23,8 @@
         "sass-loader": "^11.0.1",
         "vue-template-compiler": "^2.6.14",
         "webpack-cli": "^4.8.0"
+    },
+    "dependencies": {
+        "yarn": "^1.22.11"
     }
 }
